Overflow Issue

--- a/css/main.css
+++ b/css/main.css
@@ -2,10 +2,9 @@ html,
 body {
     margin: 0;
     padding: 0;
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    overflow-x: hidden;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
 }
 
 @media all and (orientation: landscape) {
@@ -49,8 +48,8 @@ body {
 
 @media all and (orientation: portrait) {
     #background {
-        width: 100vw;
-        height: 100vw;
+        width: 100vh;
+        height: 100vh;
         position: absolute;
         top: 0;
         left: calc(50vw - 50vh);
